src/objects/gdf_Smart_Meter_Power__c.object
<CustomObject>
    <fields>
        <fullName>gdf_Date__c</fullName>
        <description>Date meter reading is taken</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_Meter_1_00_00__c</fullName>
        <label>Meter 1 00:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Meter_1_00_15__c</fullName>
        <label>Meter 1 00:15</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Meter_1_00_30__c</fullName>
        <label>Meter 1 00:30</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>Smart Meter Power</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Smart Meter Power Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Meter Powers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>